x overflow fix

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 }
 
